examples/errors/1040-errors-failable-closure-composition.sx
// Failable closure composition (ERR E5.1): a closure LITERAL passed as a
// function-type argument and called inside the callee. Covers a bare failable
// fn-type param (`cb: (T) -> (U, !)`), the idiomatic `Closure(...)` param
// (try-propagated), and ∅-widening of a NON-failable closure literal into a
// failable slot (the generated adapter wraps the value into `{value, 0}`).
//
// NOTE: the adapter is generated when the closure LITERAL flows directly into
// the bare-fn slot. Passing a pre-bound closure *variable* into a bare-fn slot
// is a separate coercion-site path, not yet handled — see CHECKPOINT-ERR.

#import "modules/std.sx";

E :: error { Neg }

bare  :: (cb: (i64) -> (i64, !E), n: i64) -> i64 { return cb(n) catch (e) -1; }
chain :: (cb: Closure(i64) -> (i64, !E), n: i64) -> (i64, !E) { return try cb(n); }

dbl :: (x: i64) -> (i64, !E) { if x < 0 { raise error.Neg; } return x * 2; }

main :: () -> i32 {
    // failable closure literal through a bare fn-type param (matching ABI)
    print("bare ok={} err={}\n",
        bare(closure((x: i64) -> (i64, !E) { if x < 0 { raise error.Neg; } return x * 2; }), 5),
        bare(closure((x: i64) -> (i64, !E) => x * 2), -1));                 // ok=10; err: arrow never raises → cb(-1) = -2

    // Closure(...) param, try-propagated, then caught at the call site
    print("chain ok={} err={}\n",
        chain(closure((x: i64) -> (i64, !E) => x + 6), 4) catch (e) 0,        // 10
        chain(closure((x: i64) -> (i64, !E) { raise error.Neg; }), 1) catch (e) 0); // 0

    // NON-failable closure literal widened into the failable bare slot
    print("widen={}\n", bare(closure((x: i64) -> i64 => x + 1), 9));        // 10
    return 0;
}
